style.css
/* GENERAL START */

@font-face {
  font-family: FuturaBold;
  src: url(fonts/FuturaBold.otf);
}
body {
    margin: 0;
    background-color: #DEF0FF;
    font-family: 'Roboto';
    padding-bottom: 3em;
}


text {
   font-size: 1.5em;

}
.center {
  text-align: center;
}

#main-window {
  height: 824px;
  overflow-x: hidden;
}


#chart-container {
  height: 100% ;
  overflow-x: auto;
}


/* GENERAL END */

/* NAV START */
nav {
  position: absolute;
  top: 0;
  width: 100%;
  background-color: white;
  z-index: 1;
}

#logo {
  width: 100px;
  height: auto;
}

.navbar {
  padding: 1em;
}

/* NAV END */


/* TIMELINE START */

.axis-y {
  fill: none;
  stroke-width: 17px;/*17px;*/
  stroke-linejoin: round;
  stroke-linecap: round;
  color: #3A3A3A;
}

.node-label {
  font-size: .65rem;
  color: #3A3A3A;
}


/* EVENT INFO START */
#info {
  margin-top: 32px;
}
.center-align-container {
  width: 100%;
  text-align: center;
}

.event-title {
  font-family: FuturaBold;
  color: #3A3A3A;

}
.event-description {
  font-size: 20px;
  margin-bottom: 2rem;
}
.event-date {
  font-family: 'Open Sans';
  font-size: 30px;
} 
.read-more-button {
  color: #3A3A3A;;
  border-color: black;
  border-style: solid;
  border-width: .04rem;
  border-radius: 8px;
  padding: 1em 2rem;
  color: #3A3A3A;
  visibility: hidden;
}

.read-more-button:hover {
  text-decoration: none;
  color: #AF0015;
}

/* EVENT INFO END */


/* FOOTER START */

#footer {
  width: 100%;
  position: absolute;
  top: 95%;
}

.action-link {
  padding: .7em 1.5em;
  background-color: white;
  border-radius: 16px;
  font-size: 13px;
  text-align: center;
  margin-right: 1em;
  margin-top: 1em;
  color: #3A3A3A;
}

.action-link:hover {
  text-decoration:none;
  color: #AF0015;
}

/* FOOTER END */


/* Hide Scrollbar */

::-webkit-scrollbar {
    width: 0px;  /* remove scrollbar space */
    background: transparent;  /* optional: just make scrollbar invisible */
}
/* optional: show position indicator in red */
::-webkit-scrollbar-thumb {
    background: #FF0000;
}

